upgrade react native version to 0.73.4

--- a/example/android/app/src/debug/res/xml/network_security_config.xml
+++ b/example/android/app/src/debug/res/xml/network_security_config.xml
@@ -3,5 +3,7 @@
   <!-- deny cleartext traffic for React Native packager ips in release -->
   <domain-config cleartextTrafficPermitted="true">
    <domain includeSubdomains="true">localhost</domain>
+    <domain includeSubdomains="true">10.0.1.1</domain>
+    <domain includeSubdomains="true">10.0.2.2</domain>
   </domain-config>
 </network-security-config>
